# Capstone

./: 2021학년도+융합·연계형+캡스톤디자인+모집+안내문_게시용.hwp  README.md  mode5_전시용  reremap.pgm  reremap좌표
DB/air_info/: test_table.sql
TurtleBot3_dev/: slam&navigation ros package install 명령어
WebContent/: main.jsp  warning_cnt.jsp
WebContent/assets/css/: main.css
airpurifierWeb/: .project
airpurifierWeb/WebContent/: SAP_home.jsp  by_date.jsp  current.jsp  dbconn.jsp  dbtest.jsp  footer.jsp  header.jsp  login.jsp  main_page.jsp  processSignIn.jsp  processSignUp.jsp  realdate_chart.jsp  resultSignIn.jsp  resultSignUp.jsp  sign_in.jsp  sign_up.jsp  test.jsp  warning_cnt.jsp
airpurifierWeb/WebContent/css/: content.css
airpurifierWeb/WebContent/sql/: deliveryweb.sql  owner.sql  user.sql
catkin_ws/: melodic-turtlebot3-wet.rosinstall
catkin_ws/devel/include/ros_tutorials_topic/: MsgTutorial.h
catkin_ws/devel/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
catkin_ws/devel/lib/hls_lfcd_lds_driver/: hlds_laser_publisher  hlds_laser_segment_publisher
catkin_ws/devel/lib/pkgconfig/: air_pub.pc  ros_tutorials_topic.pc  turtlebot3_bringup.pc
catkin_ws/devel/lib/ros_tutorials_topic/: topic_publisher
catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
catkin_ws/src/: .rosinstall
catkin_ws/src/air_pub/src/: RPi_I2C_driver.py  air.py
catkin_ws/src/cpp_python/: CMakeLists.txt
catkin_ws/src/cpp_python/src/: infodata_publisher.py  infodata_subscriber.cpp  pmsdata_publisher.py
catkin_ws/src/ros_tutorials_topic/: package.xml
catkin_ws/src/ros_tutorials_topic/launch/: union.launch
catkin_ws/src/ros_tutorials_topic/src/: topic_publisher.cpp  topic_publisher.cpp~
code/: CMakeLists.txt  package.xml  test_navigation.cpp  test_navigation.launch  좌표위치  파일 위치
navi_test/: CMakeLists.txt  package.xml
navi_test/scripts/: Navi.cpp  multinavigation_t.cpp
rasp_ws/src/air_pub/: CMakeLists.txt
rasp_ws/src/ros_tutorials_topic/: CMakeLists.txt
real_mode/: mode_five.cpp  mode_four.cpp  mode_three.cpp  mode_two.cpp
remotepc_ws/src/: mode_five_db.cpp  mode_two.cpp
remotepc_ws/src/sap_mode/sap_mode_four/: package.xml
remotepc_ws/src/sap_mode/sap_mode_three/: CMakeLists.txt
remotepc_ws/src/sap_mode_five/: package.xml
remotepc_ws/src/sap_mode_five_db/: CMakeLists.txt
remotepc_ws/src/sap_mode_five_db/src/: mode_five.cpp  mode_five_ori.cpp
remotepc_ws/src/sap_mode_four/: CMakeLists.txt  package.xml
remotepc_ws/src/sap_mode_four_db/: CMakeLists.txt
remotepc_ws/src/sap_mode_four_db/src/: mode_four.cpp
remotepc_ws/src/sap_mode_one/: package.xml
remotepc_ws/src/sap_mode_one/src/: mode_one.cpp
remotepc_ws/src/sap_mode_three/: CMakeLists.txt
remotepc_ws/src/sap_mode_three_db/: CMakeLists.txt
remotepc_ws/src/sap_mode_three_db/src/: mode_five_db.cpp  mode_four.cpp  mode_three.cpp  mode_three_ori.cpp
remotepc_ws/src/sap_mode_two/: CMakeLists.txt
remotepc_ws/src/sap_mode_two/src/: mode_two.cpp
reremap_real_mode/: mode_one.cpp  mode_publisher.cpp  mode_two.cpp
ros_tutorials_topic/: CMakeLists.txt  package.xml
ros_tutorials_topic/sap_mode_one/: CMakeLists.txt
ros_tutorials_topic/sap_mode_one/src/: mode_one.cpp  mode_publisher.cpp
ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
sap_mode_five/: CMakeLists.txt
sap_mode_five/src/: mode_five.cpp
sap_mode_four/src/: mode_four.cpp
sap_mode_menu/sap_mode_four/: CMakeLists.txt
sap_mode_menu/sap_mode_four/msg/: TopicMsg.msg
sap_mode_menu/sap_mode_four/src/: mode_four_menu.cpp
sap_mode_menu/sap_mode_one/src/: mode_one.cpp
sap_mode_menu/sap_mode_three/src/: mode_three_menu.cpp
sap_mode_menu/sap_mode_two/: CMakeLists.txt
sap_mode_one/: CMakeLists.txt
sap_mode_one/src/: mode_one.cpp
sap_mode_real/sap_mode_five/: CMakeLists.txt  package.xml
sap_mode_real/sap_mode_five/src/: mode_five_demo.cpp  mode_five_menu.cpp
sap_mode_real/sap_mode_four/src/: mode_four.cpp
sap_mode_real/sap_mode_one/src/: mode_one_demo.cpp
sap_mode_real/sap_mode_three/: package.xml
sap_mode_real/sap_mode_three/src/: mode_three_db.cpp  mode_three_demo.cpp
sap_mode_real/sap_mode_two/src/: mode_two.cpp
sap_mode_three/: package.xml
sap_mode_three/src/: mode_four.cpp  mode_three3.cpp  mode_three4.cpp
sap_mode_two/: CMakeLists.txt  package.xml
sap_mode_two/src/:  mode_two9.cpp  mode_two.cpp  mode_two10.cpp  mode_two2.cpp  mode_two3  mode_two3.cpp  mode_two5.cpp  mode_two6.cpp  mode_two7.cpp  mode_two8.cpp  multinavigation_t.cpp
sap_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
sap_ws/src/cpp_python/: package.xml
sap_ws/src/cpp_python/src/: pmsdata_subscriber.cpp
sap_ws/src/obstacle_avoidance_simulation/: package.xml
sap_ws/src/obstacle_avoidance_simulation/src/: main.cpp  (+1 more)
sap_ws/src/ros_tutorial1_pkg/: CMakeLists.txt  package.xml
sap_ws/src/sap_mode_three/: CMakeLists.txt
sap_ws/src/test_db/: CMakeLists.txt  package.xml
sap_ws/src/test_db/src/: DBtest 2.cpp  DBtest.cpp  db_test.cpp
sap_ws/src/test_mode/: CMakeLists.txt  CMakeLists.txt.save  package.xml
sap_ws/src/turtlebot3/turtlebot3_navigation/: CMakeLists.txt  package.xml
sap_ws/src/turtlebot3/turtlebot3_navigation/scripts/: subscriber1.cpp  subscriber2.cpp  test1.cpp  test_navigation.cpp
service_ex/sap_autonomous_highest_zone_mode/: CMakeLists.txt  package.xml
service_ex/sap_autonomous_highest_zone_mode/src/: autonomous_highest_zone_mode.cpp
service_ex/sap_autonomous_instant_purification_mode/: CMakeLists.txt  package.xml
service_ex/sap_autonomous_instant_purification_mode/src/: autonomous_instant_purification_mode.cpp
service_ex/sap_selection_mode/: CMakeLists.txt  package.xml
service_ex/sap_selection_mode/param/: costmap_common_params_burger.yaml
service_ex/sap_selection_mode/src/: .selection_mode.cpp.swp  selection_mode.cpp
turtlebot3_navigation/: CMakeLists.txt  map.pgm  map.yaml  package.xml
turtlebot3_navigation/msg/: Msgfile.msg
turtlebot3_navigation/scripts/: test_navigation.cpp
web/WebContent/: current.jsp  dbconn.jsp  ex.jsp  realdate_chart.jsp
(+29 files in other folders)
